# zephyr_ndp

./: prompts.txt
doc/: ARCHITECTURE.md
modules/ndp/: CMakeLists.txt  Kconfig  modules.cmake
modules/ndp/include/ndp/: ndp_amp_shm.h  ndp_buffer.h  ndp_channel.h  ndp_errno.h  ndp_graph.h  ndp_metrics.h  ndp_sched.h  ndp_stage.h  ndp_types.h
modules/ndp/src/: ndp_amp_shm.c  ndp_buffer.c  ndp_channel.c  ndp_graph.c  ndp_metrics.c  ndp_sched.c  ndp_stage.c
modules/ndp/zephyr/: module.yml
samples/ndp_audio_amp_rt595/: README.md
samples/ndp_audio_amp_rt595/cm33/: CMakeLists.txt  prj.conf
samples/ndp_audio_amp_rt595/cm33/boards/: mimxrt595_evk.overlay
samples/ndp_audio_amp_rt595/cm33/src/: main.c
samples/ndp_audio_amp_rt595/dsp/: CMakeLists.txt  prj.conf
samples/ndp_audio_amp_rt595/dsp/boards/: mimxrt595_evk.overlay
samples/ndp_audio_amp_rt595/dsp/src/: main.c
samples/ndp_audio_recognizer_mimxrt595/: CMakeLists.txt  README.md  prj.conf
samples/ndp_audio_recognizer_mimxrt595/src/: main.c
